<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"



 >





    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin"
        android:background="#ffffff"

        android:layout_margin="5dp"

        >


            <EditText
                android:id="@+id/Inputusername"
                style="@style/modifiedEditText"
                android:maxLines="1"
                android:hint="@string/username_hint"
                />

            <EditText
                android:id="@+id/Inputid"
                style="@style/modifiedEditText"
                android:maxLines="1"
                android:hint="@string/id_hint"/>


            <EditText
                android:id="@+id/textInputEmail"
                style="@style/modifiedEditText"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/login_email_hint"/>


            <EditText
                android:id="@+id/Inputphone"
                style="@style/modifiedEditText"
                android:hint="@string/phone_hint"
                android:maxLines="1"
                android:inputType="text"/>


            <EditText
                android:id="@+id/Inputaddress"
                style="@style/modifiedEditText"
                android:hint="@string/address_hint"
                android:maxLines="1"
                android:inputType="text"/>



            <EditText
                android:id="@+id/Inputdate"
                style="@style/modifiedEditText"
                android:hint="@string/date_hint"
                android:maxLines="1"
                android:inputType="text"/>


<<<<<<< HEAD

||||||| merged common ancestors
        </com.google.android.material.textfield.TextInputLayout>
=======
        </com.google.android.material.textfield.TextInputLayout>
        <!-- main layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <!-- start of horizental layout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2">

                <Button
                    android:id="@+id/dateset"
                    style="@style/loginButton"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"


                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:text="Date set" />
>>>>>>> 4d6c5450a6067909309f6a36b9a32d57cc91bbdc

<<<<<<< HEAD
        <Button
            android:id="@+id/dateset"
            style="@style/loginButton"
            android:layout_width="100dp"
||||||| merged common ancestors
        <Button
            android:id="@+id/dateset"
            style="@style/loginButton"
            android:layout_width="138dp"

=======
                 <Button
                android:id="@+id/generatebtn"
                style="@style/loginButton"
                android:layout_height="wrap_content"

                android:layout_marginTop="80dp"
                android:text="Genarate" />
            </LinearLayout>
            <!-- end of horizontal layout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2"
                >
>>>>>>> 4d6c5450a6067909309f6a36b9a32d57cc91bbdc

<<<<<<< HEAD
android:layout_height="35dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:text="Date set"
            />
||||||| merged common ancestors
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:text="Date set" />
=======
                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
>>>>>>> 4d6c5450a6067909309f6a36b9a32d57cc91bbdc


<<<<<<< HEAD
        <ImageView
            android:id="@+id/qr"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="-50dp"
||||||| merged common ancestors
        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="-50dp"
=======
>>>>>>> 4d6c5450a6067909309f6a36b9a32d57cc91bbdc

                    app:srcCompat="@drawable/frame"
                   />

            </LinearLayout>

            <!-- end of main vertical layout-->
        </LinearLayout>



<<<<<<< HEAD
        <Button
            android:id="@+id/genbtn"
            style="@style/loginButton"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="-100dp"
||||||| merged common ancestors
        <Button
            android:id="@+id/generatebtn"
            style="@style/loginButton"
            android:layout_width="138dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="-80dp"
=======
>>>>>>> 4d6c5450a6067909309f6a36b9a32d57cc91bbdc




    </LinearLayout>


</LinearLayout>