<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="215dp"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    tools:showIn="@layout/image_register"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"

        android:layout_marginRight="10dp"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            android:id="@+id/registertext"
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:paddingLeft="100dp"
            android:text="@string/register" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/editName"
                style="@style/modifiedEditText"
                android:hint="Name"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/editMobile"
                style="@style/modifiedEditText"
                android:hint="Mobile Number"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/email"
                style="@style/modifiedEditText"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/password"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>








        <Button

            android:id="@+id/sginupbtn"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:text="Register" />

    <RelativeLayout android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        >
        <ImageView
           android:paddingTop="15dp"
            android:id="@+id/login_button"
            style="@style/profileDetailsImage"
            android:src="@drawable/facebook2" />
        <ImageView
            android:paddingTop="15dp"
            android:layout_marginLeft="40dp"
            android:id="@+id/google"
            style="@style/profileDetailsImage"

            android:src="@drawable/gmail1" />

        <TextView
            android:id="@+id/gotologinbtn"
            style="@style/parent"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/signup_login_hint"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />
    </RelativeLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
